Alignment fix

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -70,9 +70,7 @@ a {
         padding: 40px 0;
     }
 }
-@media only screen and(min-width:480px) {
-}
-@media only screen and(max-width:640px) {
+@media only screen and(max-width:768px) {
 	.main article div {
 		margin: 0 auto;
 		width: 72px;
@@ -89,7 +87,7 @@ a {
         top: 50%;
         left: 50%;
         margin-top: -50px;
-        margin-left: -315px;
+        margin-left: -220px;
     }
 }
 @media only screen and(min-width:1140px) {
